tests/ui/attr-value-is-not-a-number.stderr
error: attribute value is not a number

         = help: you need to define the size like this: `#[bitsize(32)]`

 --> tests/ui/attr-value-is-not-a-number.rs:3:11
  |
3 | #[bitsize(...)]
  |           ^^^

error: attribute value is not a number

         = help: you need to define the size like this: `#[bitsize(32)]`

 --> tests/ui/attr-value-is-not-a-number.rs:6:11
  |
6 | #[bitsize("12")]
  |           ^^^^
