tests/ui/attr-value-is-not-a-number.rs
use bilge::bitsize;

#[bitsize(...)]
enum Test {}

#[bitsize("12")]
enum Test2 {}

fn main() {}
